WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40264
HTML5 parser hits ASSERT in http/tests/misc/window-dot-stop.html
https://bugs.webkit.org/show_bug.cgi?id=40264
Summary
HTML5 parser hits ASSERT in http/tests/misc/window-dot-stop.html
Eric Seidel (no email)
Reported
2010-06-07 14:15:53 PDT
HTML5 parser hits ASSERT in http/tests/misc/window-dot-stop.html
Attachments
Patch
(1.47 KB, patch)
2010-06-07 14:18 PDT
,
Eric Seidel (no email)
abarth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2010-06-07 14:18:33 PDT
Created
attachment 58082
[details]
Patch
Adam Barth
Comment 2
2010-06-07 14:23:28 PDT
Comment on
attachment 58082
[details]
Patch Good work Mr. Taco. I wish we had HTML5 expectations.
Eric Seidel (no email)
Comment 3
2010-06-07 14:40:40 PDT
Committed
r60801
: <
http://trac.webkit.org/changeset/60801
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug