2010-06-07  Eric Seidel  <eric@webkit.org>

Reviewed by Adam Barth.

        HTML5 parser hits ASSERT in http/tests/misc/window-dot-stop.html
        https://bugs.webkit.org/show_bug.cgi?id=40264

        * html/HTML5Tokenizer.cpp:
        (WebCore::HTML5Tokenizer::executeScript):

Canonical link: https://commits.webkit.org/51823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60801 268f45cc-cd09-0410-ab3c-d52691b4dbfc